# nullable-result

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  try_trait.rs
tests/: basic_usage.rs  macro.rs
