[package]
name = "nullable-result"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.4.0"
edition = "2018"
description = "A replacement for Option<Result<T, E>> or Result<Option<T>, E>"
license = "MIT"
repository = "https://github.com/Person-93/nullable-result"
documentation = "https://docs.rs/nullable-result/"

[features]
default = ["std"]
std = []

[dependencies]
